[SPARTA-2253] Ignite final integration (#892)
* [SPARTA-2253] Ignite integration with zk as discovery mode

* Merge changes

* Added cache on all dtos

* Reference.conf properties

* Ignite logging

* [SPARTA-2281] Log 4j ignite

* [SPARTA-2281] Cache only in groups, workflows and executions

* Ignite-zk exclusions

* deployment changes

* fix import